# pcaio

./: .gitignore  CMakeLists.txt  README.md  TODO.md
core/: CMakeLists.txt  config.h.in  context.c  context.h  core.c  core.h  master.c  master.h  mutex.c  pcaio.c  queueT.c  queueT.h  task.c  task.h  thread.c  thread.h  threadlocalT.c  threadlocalT.h  threadpool.c  threadpool.h  worker.c  worker.h
examples/: CMakeLists.txt  asleep.c  asyncio.c  await.c  epoll-pipe.c  epoll_echo.c  epoll_pipe.c  minimal.c  select-echo.c  select-pipe.c  select_echo.c  select_pipe.c
include/pcaio/: core.h  io.h  listT.c  listT.h  modepoll.h  modio.h  modselect.h  mutex.h  pcaio.h  queueT.c  queueT.h  ringT.c  ringT.h  select.h  threadlocal.h  threadlocalT.c  threadlocalT.h  timer.h
modules/: CMakeLists.txt  select.c
pcaio/: CMakeLists.txt  config.h.in  context.c  context.h  gather.c  gather.h  master.c  master.h  modepoll.c  modio.c  modselect.c  pcaio.c  task.c  task.h  threadlocalT.h  threadpool.c  threadpool.h  timer.c  worker.c  worker.h
tests/: CMakeLists.txt  test-api.c  test-queueT.c  test-ringT.c  test_api.c  test_gather.c  test_listT.c  test_queueT.c
