add_library(thread OBJECT thread.c thread.h)
add_library(worker OBJECT worker.c worker.h)
add_library(task OBJECT task.c task.h)
add_library(core OBJECT core.c core.h)

set(CONFIG_PCAIO_STACKSIZE_MAX 0x800000)
set(CONFIG_PCAIO_STACKSIZE_DEFAULT 0x8000)
set(CONFIG_PCAIO_TASKQUEUE_BITS 3)
configure_file(config.h.in config.h @ONLY)
include_directories(${PROJECT_SOURCE_DIR}/core ${PROJECT_BINARY_DIR}/core)
